[gd_scene load_steps=4 format=3 uid="uid://bwsy83o5lf5fh"]

[ext_resource type="Texture2D" uid="uid://8s7lejkpdj6h" path="res://Assets/sprites/tree/tree.png" id="1_8gujh"]
[ext_resource type="Script" path="res://scenes/resources/base_resource/base_resource.gd" id="1_e2i2j"]
[ext_resource type="Theme" uid="uid://btq0bfqwg7hqv" path="res://scenes/resources/base_resource/resource.tres" id="3_243ih"]

[node name="BaseResource" type="Node2D"]
z_index = -5
script = ExtResource("1_e2i2j")

[node name="a2dResource" type="Area2D" parent="."]
z_index = -5

[node name="pbResource" type="ProgressBar" parent="."]
offset_left = -78.0
offset_top = -112.0
offset_right = 78.0
offset_bottom = -108.0
theme = ExtResource("3_243ih")
value = 50.0
show_percentage = false

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_8gujh")

[node name="tmrResource" type="Timer" parent="."]
one_shot = true

[node name="tmrHealthRegen" type="Timer" parent="."]

[connection signal="body_entered" from="a2dResource" to="." method="_on_body_entered"]
[connection signal="timeout" from="tmrResource" to="." method="_on_tmr_resource_timeout"]
[connection signal="timeout" from="tmrHealthRegen" to="." method="_on_tmr_health_regen_timeout"]
